creamos el index

--- a/Practica/Mi proyecto /servicios.html
+++ b/Practica/Mi proyecto /servicios.html
@@ -29,7 +29,7 @@
     </header>
     </div>  
  
-    <p id="titulo-primario">Lava tu auto con nosotros</p>
+    <p id="titulo-primario">Tenemos todo para consentirlo</p>
 
     <div class="container">
         <ul class="slider">
