--- a/Gatunos/media.html
+++ b/Gatunos/media.html
@@ -13,7 +13,7 @@
     <div class="responsivo">
         <header>
             <nav class="Menu-principal">
-              <img src="images/logo.jpg" class="logo-img"> 
+              <img src="images/logo3.jpg" class="logo-img"> 
               <ul class="lista-menu">
               <li> <link><a HREF="media.html">Menu </a></link></li>
               <li> <link><a HREF="servicios.html">Nuestros servicios </a></link></li>
@@ -28,12 +28,13 @@
     </div>  
  
     <p id="titulo-primario"></p>
-    <h2 id="titulo-marca">Car Wash express</h2>
-    <h3 id="subtitulo-marca">Lavamax</h3>
+    <h2 id="titulo-marca">Fundacion Gatunos</h2>
+    <h3 id="subtitulo-marca" >Hola!  Rescatamos! ... y Reubicamos</h3>
+    
     <div class="contenedor">
             <ul class="slider">
                 <li id="img2">
-                    <img src="images/img2.jpg"> 
+                    <img src="images/img00.jpg"> 
                     <p id="texto-parrafo1"> <i>Limpieza total para su auto</i> 
                 </li>          
                 </ul>
