--- a/Gatunos/servicios.html
+++ b/Gatunos/servicios.html
@@ -50,15 +50,15 @@
     <p> DESCRIPCIóN DE LA ACTIVIDAD:
         La Fundación Gatunos, quiere preparar la página web para el siguiente paso del proyecto: servir de canal para la reubicación de mascotas sin hogar.
         Aprovechando sus nuevos conocimientos en páginas web dinámicas, se le ha solicitado que incluya en el sitio tres nuevas funcionalidades:
-        1. Mejorar la portada del sitio modificando la imagen de portada por un carrusel de imágenes que muestre algunas de las mascotas exitosamente reubicadas, acompa ada de un peque o testimonio de la familia que lo adopt .
-        2. Incluir una galería de imágenes que permita a los visitantes conocer a los perritos que la Fundaci n ha rescatado y que necesitan un nuevo hogar. Debe mostrar, imagen del rescatado, su nombre y una breve rese a que hable de sus caracter sticas f sicas y/o personalidad.
+        1. Mejorar la portada del sitio modificando la imagen de portada por un carrusel de imágenes que muestre algunas de las mascotas exitosamente reubicadas, acompañada de un pequeño testimonio de la familia que lo adoptó.
+        2. Incluir una galería de imágenes que permita a los visitantes conocer a los perritos que la Fundación ha rescatado y que necesitan un nuevo hogar. Debe mostrar, imagen del rescatado, su nombre y una breve reseña que hable de sus características físicas y/o personalidad.
         3. Construir un formulario de registro de nuevos usuarios que cumpla con los siguientes requerimientos</p>
-    <p> Los datos que la Fundaci n necesita recopilar de los postulantes a adoptar una mascota son:
+    <p> Los datos que la Fundación necesita recopilar de los postulantes a adoptar una mascota son:
         Dato solicitado
         Validaciones requeridas
-        Correo electr nico
+        Correo electrónico
         Requerido
-        Formato de correo electr nico
+        Formato de correo electrónico
         Run
         Requerido
         Formato de RUN chileno
@@ -67,10 +67,10 @@
         Solo letras
         Fecha de Nacimiento
         Requerido
-        A o de nacimiento anterior a 2001
-        Tel fono de contacto
-        S lo n meros
-        Regi n
+        Año de nacimiento anterior a 2001
+        Teléfono de contacto
+        Sólo números
+        Región
         Requerido
         Debe seleccionar desde lista desplegable
         Ciudad
@@ -81,14 +81,16 @@
         Debe seleccionar desde lista desplegable
         Opciones:
         − Casa con patio grande
-        − Casa con patio peque o
+        − Casa con patio pequeño
         − Casa sin patio
         − Departamento
-        b. Utilice HTML y/o Javascript para satisfacer las necesidades de validaci n del cliente.
-        c. Considere que el formulario de registro debe ser correctamente visualizado tanto en la versi n web como en la versi n m vil del sitio.
+        b. Utilice HTML y/o Javascript para satisfacer las necesidades de validación del cliente.
+        c. Considere que el formulario de registro debe ser correctamente visualizado tanto en la versión web como en la versión móvil del sitio.
         d. Aplique estilos CSS propios o bien utilice el apoyo de un framework CSS para lograr que el formulario posea una apariencia acorde al resto del sitio.
         e.
-        El dise ador voluntario, de acuerdo con los requerimientos del Encargado de Comunicaciones, ha construido una nueva maqueta adaptada a las nuevas necesidades de la Fundaci n, que se anexa a continuaci n.</p>  
+        El diseñador voluntario, de acuerdo con los requerimientos del Encargado de Comunicaciones, ha construido una nueva maqueta adaptada a las nuevas necesidades de la Fundación, que se anexa a continuación.</p>  
         <p> </p>  
+
+        img<>
 </body>
 </html>
