--- a/Gatunos/servicios.html
+++ b/Gatunos/servicios.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="media.css">
-        <script type="text/javascript" src="media.js"></script>
+        <script type="text/javascript" src="index.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.js"></script>
@@ -16,9 +16,9 @@
         <div class="responsivo">
           <header>
           <nav class="Menu-principal">
-            <img src="images/logo.jpg" class="logo-img"> 
+            <img src="images/logo3.jpg" class="logo-img"> 
             <ul class="lista-menu">
-            <li> <link><a HREF="media.html">Menu </a></link></li>
+            <li> <link><a HREF="index.html">Menu </a></link></li>
             <li> <link><a HREF="servicios.html">Nuestros servicios </a></link></li>
             <li> <link><a HREF="contacto.html">Contacto </a></link></li>
             </ul>
@@ -54,41 +54,42 @@
         2. Incluir una galería de imágenes que permita a los visitantes conocer a los perritos que la Fundación ha rescatado y que necesitan un nuevo hogar. Debe mostrar, imagen del rescatado, su nombre y una breve reseña que hable de sus características físicas y/o personalidad.
         3. Construir un formulario de registro de nuevos usuarios que cumpla con los siguientes requerimientos</p>
     <p> Los datos que la Fundación necesita recopilar de los postulantes a adoptar una mascota son:
-        Dato solicitado
+        Dato solicitado<br>
         Validaciones requeridas
         Correo electrónico
         Requerido
-        Formato de correo electrónico
+        Formato de correo electrónico<br>
         Run
         Requerido
-        Formato de RUN chileno
+        Formato de RUN chileno<br>
         Nombre Completo
         Requerido
-        Solo letras
+        Solo letras<br>
         Fecha de Nacimiento
         Requerido
-        Año de nacimiento anterior a 2001
+        Año de nacimiento anterior a 2001<br>
         Teléfono de contacto
-        Sólo números
+        Sólo números<br>
         Región
         Requerido
-        Debe seleccionar desde lista desplegable
+        Debe seleccionar desde lista desplegable<br>
         Ciudad
         Requerido
-        Debe seleccionar desde lista desplegable
+        Debe seleccionar desde lista desplegable<br>
         Tipo de Vivienda
-        Requerido
+        Requerido<br>
+
         Debe seleccionar desde lista desplegable
-        Opciones:
-        − Casa con patio grande
-        − Casa con patio pequeño
-        − Casa sin patio
-        − Departamento
-        b. Utilice HTML y/o Javascript para satisfacer las necesidades de validación del cliente.
-        c. Considere que el formulario de registro debe ser correctamente visualizado tanto en la versión web como en la versión móvil del sitio.
-        d. Aplique estilos CSS propios o bien utilice el apoyo de un framework CSS para lograr que el formulario posea una apariencia acorde al resto del sitio.
+        Opciones:<br>
+        − Casa con patio grande<br>
+        − Casa con patio pequeño<br>
+        − Casa sin patio<br>
+        − Departamento<br>
+        b. Utilice HTML y/o Javascript para satisfacer las necesidades de validación del cliente.<br>
+        c. Considere que el formulario de registro debe ser correctamente visualizado tanto en la versión web como en la versión móvil del sitio.<br>
+        d. Aplique estilos CSS propios o bien utilice el apoyo de un framework CSS para lograr que el formulario posea una apariencia acorde al resto del sitio.<br>
         e.
-        El diseñador voluntario, de acuerdo con los requerimientos del Encargado de Comunicaciones, ha construido una nueva maqueta adaptada a las nuevas necesidades de la Fundación, que se anexa a continuación.</p>  
+        El diseñador voluntario, de acuerdo con los requerimientos del Encargado de Comunicaciones, ha construido una nueva maqueta adaptada a las nuevas necesidades de la Fundación, que se anexa a continuación.</p>  <br>
         <p> </p>  
 
         img<>
