--- a/Gatunos/contacto.html
+++ b/Gatunos/contacto.html
@@ -15,7 +15,7 @@
       <img src="images/logo3.jpg" class="logo-img"> 
       <ul class="lista-menu">
       <li> <link><a HREF="index.html">Menu </a></link></li>
-      <li> <link><a HREF="servicios.html">Nuestros servicios </a></link></li>
+      <li> <link><a HREF="servicios.html">Lo que Hacemos </a></link></li>
       <li> <link><a HREF="contacto.html">Contacto </a></link></li>
       </ul>
 </head>
