Se cambia el nombre carpeta Images

--- a/Gatunos/index.html
+++ b/Gatunos/index.html
@@ -13,7 +13,7 @@
     <div class="responsivo">
         <header>
             <nav class="Menu-principal">
-              <img src="images/logo3.jpg" class="logo-img"> 
+              <img src="Images/logo3.jpg" class="logo-img"> 
               <ul class="lista-menu">
               <li> <link><a HREF="index.html">Menu </a></link></li>
               <li> <link><a HREF="servicios.html">Lo que hacemos </a></link></li>
@@ -33,13 +33,13 @@
     <div class="contenedor">
             <ul class="slider">
                 <li id="img2">
-                    <img src="images/img00.jpg"> 
+                    <img src="Images/img00.jpg"> 
                     <p id="texto-parrafo1"> <link><a HREF="servicios.html">Casos de éxito </a></link></li>
                 </li>          
                 </ul>
 
                 <li id="img3">
-                    <img src="images/img3.jpg"> 
+                    <img src="Images/img3.jpg"> 
                     </li>  
             <br>
             <p id="texto-parrafo2"> <link><a HREF="servicios.html">Lo Que hacemos </a></link></li>
