Cambio a metod get

--- a/Gatunos/contacto.html
+++ b/Gatunos/contacto.html
@@ -31,7 +31,7 @@
 <!--head form-->
 <div class="container">
 
-    <form  id="contact_form"  class="well form-horizontal" action=" " method="post" >
+    <form  id="contact_form"  class="well form-horizontal" action=" " method="get" >
     <fieldset>
     
  
