--- a/Carwash/media.html
+++ b/Carwash/media.html
@@ -13,7 +13,7 @@
     <div class="responsivo">
         <header>
             <nav class="Menu-principal">
-              <img src="images/logo.jpg" class="logo-img"> 
+              <img src="Images/logo.jpg" class="logo-img"> 
               <ul class="lista-menu">
               <li> <link><a HREF="media.html">Menu </a></link></li>
               <li> <link><a HREF="servicios.html">Nuestros servicios </a></link></li>
@@ -33,13 +33,13 @@
     <div class="contenedor">
             <ul class="slider">
                 <li id="img2">
-                    <img src="images/img2.jpg"> 
+                    <img src="Images/img2.jpg"> 
                     <p id="texto-parrafo1"> <i>Limpieza total para su auto</i> 
                 </li>          
                 </ul>
 
                 <li id="img4">
-                    <img src="images/img4.jpg"> 
+                    <img src="Images/img4.jpg"> 
                     </li>  
             <br>
             <p id="texto-parrafo2"> <link><a HREF="servicios.html">Nuestros servicios </a></link></li>
