se cambia nombre carpeta images

--- a/Carwash/servicios.html
+++ b/Carwash/servicios.html
@@ -16,7 +16,7 @@
         <div class="responsivo">
           <header>
           <nav class="Menu-principal">
-            <img src="images/logo.jpg" class="logo-img"> 
+            <img src="Images/logo.jpg" class="logo-img"> 
             <ul class="lista-menu">
             <li> <link><a HREF="media.html">Menu </a></link></li>
             <li> <link><a HREF="servicios.html">Nuestros servicios </a></link></li>
@@ -34,10 +34,10 @@
     <div class="container">
         <ul class="slider">
             <li id="img1">
-                <img src="images/img1.jpg"> 
+                <img src="Images/img1.jpg"> 
             </li>
             <li id="img2">
-                <img src="images/img2.jpg"> 
+                <img src="Images/img2.jpg"> 
             </li>  
         </ul>
 
