--- a/Carwash/contacto.html
+++ b/Carwash/contacto.html
@@ -16,7 +16,7 @@
   <div class="responsivo">
     <header>
     <nav class="Menu-principal">
-      <img src="images/logo.jpg" class="logo-img"> 
+      <img src="Images/logo.jpg" class="logo-img"> 
       <ul class="lista-menu">
       <li> <link><a HREF="media.html">Menu </a></link></li>
       <li> <link><a HREF="servicios.html">Nuestros servicios </a></link></li>
