--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-<!--
-	Daraz by TEMPLATE STOCK
-	templatestock.co @templatestock
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
+
 
 <html lang="en">
 	<head>
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Daraz by TEMPLATE STOCK</title>
+    <title>BzoneLabs</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/font-awesome.min.css"/>
@@ -23,8 +19,7 @@
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZXJBVDf7R4JqmSpopVPoduIGWx1IwpBM"></script>
     <script type="text/javascript" src="js/plugins.js"></script>
 
-		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -61,17 +56,17 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#header">Daraz</a>
+            <a class="navbar-brand" href="#header">BzoneLabs</a>
           </div><!-- /.navbar-header -->
 
           <div class="collapse navbar-collapse" id="menu">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#header">Home</a></li>
-              <li><a href="#about">About</a></li>              
-              <li><a href="#portfolio">Portfolio</a></li>
-			  <li><a href="#team">Team</a></li>
+              <li><a href="#header">Inicio</a></li>
+              <li><a href="#about">Nosotros</a></li>              
+              <li><a href="#portfolio">Portafolio</a></li>
+			  <li><a href="#team">Team</a></li>∫
 			  <li><a href="#info">Info</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="#contact">Contactenos</a></li>
             </ul>
           </div> <!-- /.navbar-collapse -->
         </div> <!-- /.container -->
@@ -94,7 +89,7 @@
 
                     <div class="slider-content">
                       <h1></h1>
-                      <p>We are a creative agency from the earth of Bandung, Indonesia</p>
+                      <p>Productos desarrollados a medida </p>
                     </div>
 
                   </div> <!-- /.col-md-12 -->
@@ -136,13 +131,13 @@
         <script type="text/javascript">
         var dataHeader = [
                             {
-                              bigImage :"images/slide-1.jpg",
-                              title : "Minimal & Clean",
+                              bigImage :"images/slide-2.jpg",
+                              title : "Soluciones Informaticas",
 							  author : "Templatestock"
                             },
                             {
-                              bigImage :"images/slide-2.jpg",
-                              title : "I'm A Creative Theme",
+                              bigImage :"images/slide-1.jpg",
+                              title : "Temas Creativos ",
                               author : "Templatestock"
                             },
                             {
@@ -165,8 +160,9 @@
 
     <section id="about" class="light">
       <header class="title">
-        <h2>About <span>Us</span></h2>
-        <p>Lorem ipsum Esse esse cillum nisi cillum deserunt tempor ut pariatur qui officia. Lorem ipsum Magna eu irure sint <strong>occaecat</strong> cupidatat dolore minim irure cillum.</p>
+        <h2>Acerca de  <span>Nosotros</span></h2>
+        <p>Desarrolladores Web certificados : Developers back-end , UX UI experience y DDBB. unidos para crear soluciones informaticas siendo un apoyo a las empresas que buscan posicionamiento en la Web de sus productos y/o servicios a costos convenientes en tiempos acotados.
+        <p><strong>Nuevas Soluciones</strong> Crear software a las necesidades del cliente , realizar procesos de automatizacion y respaldo de la informacion </p>
       </header>
 
       <div class="container">
@@ -182,8 +178,8 @@
               <div class="about-content left animated" data-animate="fadeInLeft">
                 <div class="about-icon"><i class="fa fa-code"></i></div>
                 <div class="about-detail">
-                  <h4>Clean Code</h4>
-                  <p>Lorem ipsum Ad nisi dolore ut sit do dolor commodo sint ullamco. Lorem ipsum Magna enim eu irure sit eiusmod fugiat et. Lorem ipsum Consequat in cupidatat cupidatat non in non veniam dolore.</p>
+                  <h4>Codigo limpio y escalable</h4>
+                  <p>En lo que es desarrollo web ...tenemos distintos tipos de lenguajes segun las necesidades y seguridad de la informacion </p>
                 </div>
               </div>
 
