--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </svg>
               </span>
               <div>
-                <span>Prev Photo</span>
+                <span>Anterior</span>
                 <h3>...</h3>
                 <p>...</p>
                 <img alt="Previous thumb">
@@ -119,7 +119,7 @@
                 </svg>
               </span>
               <div>
-                <span>Next Photo</span>
+                <span>Siguiente</span>
                 <h3>...</h3>
                 <p>...</p>
                 <img alt="Next thumb">
@@ -133,25 +133,31 @@
                             {
                               bigImage :"images/slide-2.jpg",
                               title : "Soluciones Informaticas",
-							  author : "Templatestock"
+							  author : "Bzonelabs"
                             },
                             {
                               bigImage :"images/slide-1.jpg",
-                              title : "Temas Creativos ",
-                              author : "Templatestock"
+                              title : "Sitios WEB",
+                              author : "Bzonelabs"
                             },
                             {
                               bigImage :"images/slide-3.jpg",
-                              title : "Achieve Success",
-                              author : "Templatestock"
+                              title : "Intranet SharePoint y Office 365",
+                              author : "Bzonelabs"
                             }
                         ],
-            loaderSVG = new SVGLoader(document.getElementById('loader'), {speedIn : 600, speedOut : 600, easingIn : mina.easeinout});
+            loaderSVG = new SVGLoader(document.getElementById('loader'), {speedIn : 1000, speedOut : 120, easingIn : mina.easeinout});
             loaderSVG.show()
         </script>
-
+        
       </div><!-- /.header-slide -->
     </section>
+    
+    <!--<video controls autoplay loop muted>
+      <source src="videos/video.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>-->
+
 
     <!-- HEADER END -->
 
@@ -186,8 +192,8 @@
               <div class="about-content left animated" data-animate="fadeInLeft">
                 <div class="about-icon"><i class="fa fa-desktop"></i></div>
                 <div class="about-detail">
-                  <h4>Fully Responsive</h4>
-                  <p>Lorem ipsum Ex labore dolor magna in proident ad reprehenderit consequat irure nostrud quis. Lorem ipsum Veniam velit non cupidatat nulla et proident.</p>
+                  <h4>Full Responsive</h4>
+                  <p>diseñado tanto como para computadoreas tablets o smartphone, la resolucion se adapta a los dispositvos en el cual se esta usando</p>
                 </div>
               </div>
 
@@ -309,10 +315,10 @@
                 <img src="images/team-1.png" alt="" class="img-circle">
               </div>
 
-              <h3>John Doe</h3>
-              <h5>Creative Director</h5>
+              <h3>Ignacio Ferrada</h3>
+              <h5>Developer</h5>
 
-              <p>Lorem ipsum Proident incididunt sint dolor cupidatat pariatur dolore magna pariatur in ea aliqua.</p>
+              <p>Ingeniero Desarrollo y soluciones de negocio</p>
 
               <div class="team-social">
                 <ul class="list-inline social-list">
@@ -353,9 +359,9 @@
                 <img src="images/team-3.png" alt="" class="img-circle">
               </div>
 
-              <h3>Elche</h3>
-              <h5>Developer</h5>
 
+              <h3>John Doe</h3>
+              <h5>Creative Director</h5>
               <p>Lorem ipsum Proident incididunt sint dolor cupidatat pariatur dolore magna pariatur in ea aliqua.</p>
 
               <div class="team-social">
@@ -398,7 +404,7 @@
 
     <section id="info" class="dark">
       <header class="title">
-        <h2>Our <span>Experties</span></h2>
+        <h2>Nuestra <span>Expertiz</span></h2>
         <p>Lorem ipsum Nulla in incididunt esse tempor dolore ad voluptate aliquip magna sed in.</p>
       </header>
 
@@ -407,9 +413,13 @@
           <div class="col-md-6">
             <div class="skill">
               <ul class="skill-bar list-unstyled">
-                <li><span class="percentage" data-value="50%"></span><em>Branding</em></li>
-                <li><span class="percentage" data-value="95%"></span><em>Development</em></li>
-                <li><span class="percentage" data-value="22%"></span><em>Social</em></li>
+                <li><span class="percentage" data-value="90%"></span><em>Diseño Web optimizados todas las plataformas</em></li>
+                <li><span class="percentage" data-value="85%"></span><em>Desarrollo de Apps</em></li>
+                <li><span class="percentage" data-value="75%"></span><em>Posicionamiento en la Web</em></li>
+                <li><span class="percentage" data-value="95%"></span><em>Dominios en Internet</em></li>
+                <li><span class="percentage" data-value="75%"></span><em>Correos Corporativos</em></li>
+
+
               </ul>
             </div>
           </div>
@@ -417,9 +427,11 @@
           <div class="col-md-6">
             <div class="skill">
               <ul class="skill-bar list-unstyled">
-                <li><span class="percentage" data-value="63%"></span><em>Graphic Design</em></li>
-                <li><span class="percentage" data-value="90%"></span><em>Consulting</em></li>
-                <li><span class="percentage" data-value="43%"></span><em>Logo</em></li>
+                <li><span class="percentage" data-value="90%"></span><em>Proyectos de Ingenieria</em></li>
+                <li><span class="percentage" data-value="95%"></span><em>Construcción de Sistemas Web </em></li>
+                <li><span class="percentage" data-value="95%"></span><em>Intranet </em></li>
+                <li><span class="percentage" data-value="95%"></span><em>Asesorias</em></li>
+                <li><span class="percentage" data-value="90%"></span><em>Hosting</em></li>
               </ul>
             </div>
           </div>
@@ -437,8 +449,8 @@
                 <i class="fa fa-group"></i>
               </div>
               <div class="counter-content">
-                <span class="value" data-from="0" data-to="43"></span>
-                <small>Clients</small>
+                <span class="value" data-from="0" data-to="10"></span>
+                <small>Clientes</small>
               </div>
             </div>
           </div>
@@ -449,8 +461,8 @@
                 <i class="fa fa-leaf"></i>
               </div>
               <div class="counter-content">
-                <span class="value" data-from="0" data-to="20"></span>
-                <small>Awards</small>
+                <span class="value" data-from="0" data-to="1"></span>
+                <small>Sello Verde</small>
               </div>
             </div>
           </div>
@@ -462,7 +474,7 @@
               </div>
               <div class="counter-content">
                 <span class="value" data-from="0" data-to="34"></span>
-                <small>Projects</small>
+                <small>Projectos</small>
               </div>
             </div>
           </div>
@@ -487,7 +499,7 @@
 
      <section id="contact" class="dark">
       <header class="title">
-        <h2>Contact <span>Us</span></h2>
+        <h2>Contacta <span>NOs</span></h2>
         <p>Lorem ipsum Esse esse cillum nisi cillum deserunt tempor ut pariatur qui officia. Lorem ipsum Magna eu irure sint occaecat cupidatat dolore minim irure cillum.</p>
       </header>
 
@@ -497,16 +509,16 @@
             <form action="#">
               <div class="row">
                 <div class="col-md-6">
-                  <input type="text" class="form-control" placeholder="Your Name">
+                  <input type="text" class="form-control" placeholder="Nombre">
                 </div>
                 <div class="col-md-6">
-                  <input type="email" class="form-control" placeholder="Your Email">
+                  <input type="email" class="form-control" placeholder="Email">
                 </div>
                 <div class="col-md-12">
-                  <textarea class="form-control" rows="3" placeholder="Tell Us Everything"></textarea>
+                  <textarea class="form-control" rows="3" placeholder="Comentarios"></textarea>
                 </div>
                 <div class="col-md-12">
-                  <button class="btn btn-default submit">Send Message</button>
+                  <button class="btn btn-default submit">Enviar mensaje</button>
                 </div>
               </div>
             </form>
@@ -514,9 +526,9 @@
 
           <div class="col-md-4 animated" data-animate="fadeInRight">
             <address>
-                <span><i class="fa fa-map-marker fa-lg"></i> 84 State Road 123 City, State 24813</span>
-                <span><i class="fa fa-phone fa-lg"></i> (123) xxx - xxx</span>
-                <span><i class="fa fa-envelope-o fa-lg"></i> <a href="mailto:contact@example.com">contact&#64;example.com</a></span>
+                <span><i class="fa fa-map-marker fa-lg"></i> Santiago, Chile</span>
+                <span><i class="fa fa-phone fa-lg"></i> (+569) 8 948 88 77</span>
+                <span><i class="fa fa-envelope-o fa-lg"></i> <a href="mailto:contact@example.com">iferrada01&#64;gmail.com</a></span>
                 <span><i class="fa fa-globe fa-lg"></i> <a href="http://support.example.com">support.example.com</a></span>
             </address>
           </div>
@@ -529,8 +541,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <p>Made BY <i class="fa fa-heart"></i> <a href="http://templatestock.co">Template Stock</a></p>
-            <p><small>Images : unsplash.com</small></p>
+            <p>Made BY <i class="fa fa-heart"></i> <a href="https://edgardalejos.com/intranet-con-sharepoint-y-office-365/">Intranet</a></p>
+            <p><small>2022 @Copyrigth Bzonelabs</small></p>
           </div>
         </div>
       </div>
